fix: fixing z-index while hovering canvas elements

--- a/src/components/CanvasElements/CanvasElement.scss
+++ b/src/components/CanvasElements/CanvasElement.scss
@@ -13,7 +13,6 @@
   padding: 15px 20px;
   left: 10% !important;
   right: 10%;
-  z-index: 0;
 
   &.mouse-over {
     z-index: 1;
